# yuflow

./: .eslintrc.cjs  PRD.md  QUICK_TEST_COMMANDS.md  README.md  TEST_GUIDE.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dev-dist/: sw.js
public/: manifest.webmanifest
src/: App.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: backup.rs  commands.rs  database.rs  lib.rs  main.rs  models.rs  tests.rs
src/adapters/desktop/: index.ts
src/adapters/web/: index.ts
src/components/features/: AdvancedFilters.tsx  BulkActions.tsx  CategoryManager.tsx  CreateTaskModal.tsx  SearchBar.tsx  SettingsModal.tsx  SortMenu.tsx  TaskGrid.tsx  TaskItem.tsx  TaskList.tsx  ViewModeSelector.tsx  index.ts
src/components/features/__tests__/: TaskItem.test.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  ConfirmDialog.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  index.ts
src/components/ui/__tests__/: Button.test.tsx  Input.test.tsx
src/services/database/: index.ts
src/services/platform/: detect.ts  index.ts
src/stores/: index.ts  taskStore.ts  uiStore.ts
src/styles/: globals.css
src/test/: privacy-compliance.test.ts  setup.ts
src/types/: index.ts  models.ts
